@@ -122,6 +122,7 @@ from astroid.nodes import (
     IfExp,
     Import,
     ImportFrom,
+    Interpolation,
     JoinedStr,
     Keyword,
     Lambda,
@@ -151,6 +152,7 @@ from astroid.nodes import (
     Slice,
     Starred,
     Subscript,
+    TemplateStr,
     Try,
     TryStar,
     Tuple,
